demo-1/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-1
  namespace: devteam123
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-1
  template:
    metadata:
      labels:
        app: service-1
    spec:
      containers:
      - name: service-1
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - name: html-volume
          mountPath: /usr/share/nginx/html
      volumes:
      - name: html-volume
        configMap:
          name: service-1-html
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-2
  namespace: devteam123
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-2
  template:
    metadata:
      labels:
        app: service-2
    spec:
      containers:
      - name: service-2
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - name: html-volume
          mountPath: /usr/share/nginx/html
      volumes:
      - name: html-volume
        configMap:
          name: service-2-html
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-3
  namespace: devteam123
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-3
  template:
    metadata:
      labels:
        app: service-3
    spec:
      containers:
      - name: service-3
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - name: html-volume
          mountPath: /usr/share/nginx/html
      volumes:
      - name: html-volume
        configMap:
          name: service-3-html
