demo-1/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-1
  namespace: devteam123
spec:
  selector:
    app: service-1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
----
apiVersion: v1
kind: Service
metadata:
  name: service-2
  namespace: devteam123
spec:
  selector:
    app: service-2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: service-3
  namespace: devteam123
spec:
  selector:
    app: service-3
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
